--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       
       <form class="d-flex ms-auto" role="search">
-        <button class="btn btn-outline-warning" type="submit" ><a class="text-decoration-none text-light" href="/Front End - Route/js projects/4th js project/index.html" onclick="logOut()">Log Out</a></button>
+        <button class="btn btn-outline-warning" type="submit" ><a class="text-decoration-none text-light" href="index.html" onclick="logOut()">Log Out</a></button>
       </form>
     </div>
   </div>
