--- a/signUp.html
+++ b/signUp.html
@@ -28,7 +28,7 @@
         <p id="status"></p>
         <div class="mb-3 text-center pb-5">
             <button class="btn btn-outline-info w-100" onclick="signUp()">Sign Up</button>
-            <p class="pt-3 text-light fs-6">Don’t have an account? <a class="text-light text-decoration-none" href="/">Signin</a></p>
+            <p class="pt-3 text-light fs-6">Don’t have an account? <a class="text-light text-decoration-none" href="/index">Signin</a></p>
 
         </div>
 
