--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p id="invalidLogin" ></p>
         <div class="mb-3 text-center pb-5">
             <button class="btn btn-outline-info w-100" onclick="login()">Login</button>
-            <p  class="pt-3 text-light fs-6">Don’t have an account? <a class="text-light text-decoration-none" href="/signUp">Sign Up</a></p>
+            <p  class="pt-3 text-light fs-6">Don’t have an account? <a class="text-light text-decoration-none" href="signUp.html">Sign Up</a></p>
 
         </div>
 
